--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ remote_theme :         hydecorp/hydejack
 url:                   "https://resumait.github.io"
 base_url :             "/resumait-tutorial" 
 
-accent_image:          /assets/img/sidebar-bg-dark.jpg 
+accent_image:          /assets/img/sidebar.jpg 
 accent_color:          rgb(30,30,30)                   
 theme_color:           rgb(10,10,10)                   
 
