fix: update _config.yml for gray design

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url:                   "https://resumait.github.io"
 base_url :             "/resumait-tutorial" 
 
 accent_image:          /assets/img/sidebar.jpg 
-accent_color:          rgb(30,30,30)                   
-theme_color:           rgb(18,18,18)                   
+accent_color:          rgb(46, 46, 46)              
+theme_color:           rgb(24, 24, 24)                  
 
 google_fonts:          false
 
